Update style.css (Fixing spacing errors on the website launch)

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+    padding:20px;
 }
 body::before {
     content: "";
@@ -40,10 +41,16 @@ p {
 form {
     display: flex;
     flex-direction: column;
+    align-items:center;
+    width: 100%;
 }
 label {
     margin-top: 10px;
     font-weight: bold;
+    display: block;
+    text-align: left;
+    width: 100%;
+    max-width: 350px;
 }
 input {
     padding: 10px;
@@ -51,6 +58,7 @@ input {
     border: 1px solid #ccc;
     border-radius: 5px;
     width: 100%;
+    max-width: 350px;
     box-sizing: border-box;
 }
 button {
@@ -62,6 +70,8 @@ button {
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
+    width: 100%;
+    max-width: 350px;
 }
 button:hover {
     background: #333;
